Make sure edit control's z-index is above widgets

--- a/src/components/widgets/widgets.less
+++ b/src/components/widgets/widgets.less
@@ -17,6 +17,7 @@
     visibility: hidden;
     font-size: 14pt;
     height: 0px;
+    z-index: 100;
     .scale{
       position: absolute;
       cursor: se-resize;
